package.json changed name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-list",
+  "name": "people-list",
   "version": "0.1.0",
   "homepage": "https://anastasiiaaliinyk.github.io/people-list/",
   "private": true,
